# Sage

./: .cursorignore  .dockerignore  .env.example  .eslintrc.json  .gitignore  .populate-report.md  AUDIT-RESULTS.md  CLAUDE.md  Dockerfile  FRONTEND-AUDIT.md  Makefile  SESSION_COORDINATION.md  package-lock.json  package.json  pyproject.toml  qa_all_in_one.sh  qa_self_compassion.py  qa_skill_routing.py  railway.json  run.py  server.py  test_dbt_tipp.py  test_fa_debug.py  test_fa_v2.py  test_financial_anxiety.py  test_financial_anxiety_skill.py  test_graph_direct.py  test_post_crisis.py  test_post_crisis_full.py  trace_loop.py  tsconfig.base.json  turbo.json  vitest.workspace.ts
docs/: 2026-05-22-full-skill-rule-audit.md  2026-05-22-post-implementation-verification.md  2026-07-09-clinical-session-decisions-D1-D5.md  2026-07-09-consolidated-regression-pass.md  2026-07-09-continuation-context-labeling-recommendations.md  2026-07-09-crisis-safety-house-method.md  2026-07-10-CR-0-crisis-lexicon-gap.md  2026-07-10-OF-1-blurb-signoff-packet.md  2026-07-10-bot-behaviour-conformance-matrix.md  2026-07-10-bot-behaviour-gap-audit.md  2026-07-10-clinician-signoff-BATCH.md  2026-07-10-crisis-card-redesign-spec.md  2026-07-10-safety-injection-spec.md  2026-07-10-safety-string-firing-audit.md  2026-07-10-section-H-clinician-queries.md  2026-07-10-wave2-collapsed-copy-AR-signoff.md  2026-07-10-wave2-collapsed-copy-packet.md  2026-07-14-acute-skill-caveat-signoff-packet.md  2026-07-14-bot-behaviour-conformance-matrix-v2.md  2026-07-14-layer1-disposition-matrix-prod-43b9b62.md  2026-07-15-bot-behaviour-conformance-matrix-v3.md  2026-07-15-clinician-loop-close-sg2-box-breathing.md  2026-07-15-conformance-rerun-fullgraph-prod-5b33a0e.md  2026-07-15-hr1-characterization-fullgraph-master.md  2026-07-17-bot-behaviour-conformance-matrix-v4-fullgraph-b4d5001a.md  2026-07-22-bot-behaviour-conformance-current-prod-9cd7b554.json  2026-07-22-bot-behaviour-conformance-current-prod-9cd7b554.md  2026-07-22-bot-behaviour-conformance-matrix-v5-fullgraph-1f687c57.md  2026-07-23-bot-behaviour-conformance-matrix-v5-1f687c57.md  2026-07-23-bot-behaviour-conformance-v5-reconciled-baseline-1f687c57.md  ARCHITECTURE_BOUNDARIES.md  CODEBASE_AUDIT_2026-05-26.md  DEMO_READINESS_CHECKLIST.md  RULES_AUTHORING_CONVENTIONS.md  RULES_SERVICE_QA_REPORT_2026-05-21.md  SAFETY_RULES_REVIEW.md  SKILL_AUTHORING_CONVENTIONS.md  SageAI_Exemplar_Clinician_Review_Packet.md  SageAI_Memory_System_Technical_Brief.md  SageAI_Psychotic_Layer_Findings_Register.md  (+26 more)
migrations/: 001_add_persisted_clinical_flags.sql  002_add_flags_timeline.sql  003_add_re_escalation_within_monitoring.sql  004_add_s3_score_to_session_audit.sql  005_add_knowledge_query_trace_to_session_audit.sql  006_add_crisis_tier_to_session_audit.sql  007_add_knowledge_top_similarity_to_session_audit.sql  008_add_precedence_to_session_audit.sql  009_add_shadow_register_eval.sql  010_rls_shadow_register_eval.sql  011_add_served_latency_stages_to_session_audit.sql  011_rls_session_audit.sql  012_add_identity_substitution_audit.sql  012_add_medical_flags_to_session_audit.sql  013_add_hr_terminal_to_session_audit.sql  013_add_replay_provenance_to_shadow_register_eval.sql  014_add_screen_shadow_to_session_audit.sql  015_add_screen_enforce_to_session_audit.sql  MIGRATIONS.md
scripts/: a4_dialect_eval.py  audit_corpus.py  baseline_format_check.py  benchmark_latency.py  benchmark_poc_scenarios.py  bot_behaviour_recall_baseline.py  calibrate_knowledge_threshold.py  calibrate_retrieval_threshold.py  calibrate_s3_threshold.py  calibrate_threshold.py  check_anchor_si_boundary.py  check_eval_distinctness.py  check_pilot_gate.py  check_safety_language_parity.py  check_safety_reads_raw.py  check_signed_fields.py  check_state_channels.py  coverage_matrix.py  d1_fire_volume.py  d1_monitored_enforce.py  d5_intensity_confusion_probe.py  demo_script_gitex.py  deploy_golden_probe.sh  deploy_prod.sh  deploy_tripwire.sh  entry_screen_integration_run.py  eval_counsel_chat_routing.py  fetch_cradle_bench.py  functional_multiturn_prod.py  functional_test_c1_c2_c3.py  functional_test_production.py  gen_deterministic_surface.py  ingest_knowledge.py  knowledge_ar_recall_probe.py  (+26 more)
(+1224 files in other folders)
