[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sage-poc"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0.0,<2.0.0",
    "langchain-openai>=1.0.0,<2.0.0",
    "langchain-core>=1.0.0,<2.0.0",
    "langdetect>=1.0.9,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "sentence-transformers>=3.0.0,<4.0.0",
    "numpy>=1.26.0,<3.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "requests>=2.32.0,<3.0.0",
    "httpx>=0.27.0,<1.0.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (requires Ollama or real LLM)",
]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["src/sage_poc"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
