[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sage-poc"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0.0,<2.0.0",
    "langchain-openai>=1.0.0,<2.0.0",
    "langchain-core>=1.0.0,<2.0.0",
    "langdetect>=1.0.9,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "sentence-transformers>=3.0.0,<4.0.0",
    "numpy>=1.26.0,<3.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.30.0,<1.0.0",
    "langgraph-checkpoint-postgres>=2.0.0,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "psycopg[async]>=3.1.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "requests>=2.32.0,<3.0.0",
    "httpx>=0.27.0,<1.0.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (requires Ollama or real LLM)",
    "integration: marks tests requiring live external services (SUPABASE_URL, SUPABASE_SERVICE_KEY)",
]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/sage_poc"]
