[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sage-poc"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0.0,<2.0.0",
    "langchain-openai>=1.0.0,<2.0.0",
    "langchain-core>=1.0.0,<2.0.0",
    "langdetect>=1.0.9,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "sentence-transformers>=3.0.0,<4.0.0",
    "numpy>=1.26.0,<3.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.30.0,<1.0.0",
    "langgraph-checkpoint-postgres>=2.0.0,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "psycopg[async]>=3.1.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "requests>=2.32.0,<3.0.0",
    "httpx>=0.27.0,<1.0.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (requires Ollama or real LLM)",
    "integration: marks tests requiring live external services (SUPABASE_URL, SUPABASE_SERVICE_KEY)",
    "clinical_decision_pending: marks tests that are intentionally failing pending a clinical governance decision — not broken builds",
    "governance: marks governance assertions (approved_by burn-down) — intentionally red; run separately with make test-governance",
    "cradle: marks CRADLE Bench external validation tests — requires eval.jsonl from scripts/fetch_cradle_bench.py",
]
pythonpath = ["src", "."]
asyncio_mode = "auto"
# Excluded from the default run — each has a dedicated Makefile target:
#   integration:           make test-integration  (requires live Supabase)
#   governance:            make test-governance   (expected red during sign-off burn-down)
#   clinical_decision_pending: not a Makefile target — these tests await a clinical decision
#   cradle:                pytest -m cradle       (requires eval.jsonl from scripts/fetch_cradle_bench.py)
addopts = "-m 'not integration and not clinical_decision_pending and not governance and not cradle'"

[tool.hatch.build.targets.wheel]
packages = ["src/sage_poc"]

[dependency-groups]
dev = [
    "pytest-xdist>=3.8.0",
]
